<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/center_label"
        android:textSize="25sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@color/common_google_signin_btn_text_light_focused"
        ></Button>

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:background="@drawable/rounted_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        android:text="@string/a"
        ></Button>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="@drawable/rounted_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:text="@string/_1990"
        ></Button>

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:background="@drawable/rounted_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="220dp"
        android:layout_marginStart="50dp"
        android:text="@string/b"
        ></Button>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="@drawable/rounted_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="50dp"
        android:text="@string/_1999"
        ></Button>

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:background="@drawable/rounted_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="290dp"
        android:layout_marginStart="50dp"
        android:text="@string/c"
        ></Button>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="@drawable/rounted_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="50dp"
        android:text="@string/_117"
        ></Button>







    <Button
        android:id="@+id/center_patients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:text="@string/about"
        ></Button>


</RelativeLayout>